tests/fixtures/fail/closure_capture_borrow_conflict.sali
let main(): i32 = {
  let mut value = 40
  let read = { -> value }
  value = 42
  read()
}
